--- a/src/components/Title.css
+++ b/src/components/Title.css
@@ -4,3 +4,19 @@
     align-items: center;
     height: 100vh;
 }
+
+#back-btn {
+    position:absolute;
+    left: 0px;
+    bottom:0px;
+    margin:50px 100px;
+    font-size:1em;
+}
+
+.underlined-btn {
+    background:none;
+    outline:inherit;
+    padding:0 10;
+    border:none;
+    border-bottom: 2px solid black;
+}
