--- a/src/components/FormComponents/SelectBoxGroup.css
+++ b/src/components/FormComponents/SelectBoxGroup.css
@@ -2,6 +2,8 @@
     display:flex;
     align-items: center;
     justify-content: space-evenly;
+    max-width: 80%;
+    flex-wrap: wrap;
 }
 
 .radio-input {
