--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,11 +1,12 @@
 #form-container {
     display:flex;
     height:100%;
-    background:rgb(245, 245, 245);
+    background:#f3f3f3;
     min-height: 100vh;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding:0 0 50px 0;
 }
 
 form {
@@ -15,15 +16,24 @@ form {
 }
 
 .solid-btn {
-    padding:20px 35px;
-    border:2px solid black;
-    color:white;
+    border:none;
+    padding:10px 25px;
+    color:rgb(255, 255, 255);
     background:black;
     border-radius: 5px;
+    transition-duration: 0.08s;
+    transition-delay: 0.05s;
+    box-shadow: 3px 3px 10px rgb(141, 141, 141);
+}
+
+.solid-btn:hover {
+    color:black;
+    outline:2px solid black;
+    background-color: #f3f3f3;
 }
 
 #next-btn {
-    position:absolute;
+    position:fixed;
     right:0px;
     bottom:0px;
     margin:50px 100px;
