--- a/src/components/FormComponents/SelectBoxGroup.css
+++ b/src/components/FormComponents/SelectBoxGroup.css
@@ -2,8 +2,11 @@
     display:flex;
     align-items: center;
     justify-content: space-evenly;
-    max-width: 80%;
+    width:55%;
     flex-wrap: wrap;
+    border:3px solid #d0d0d0;
+    border-radius:5px;
+    margin:20px 0;
 }
 
 .radio-input {
@@ -18,5 +21,5 @@
 }
 
 .radio-input label {
-    font-size:2em;
+    font-size:1em;
 }
