--- a/src/components/FormComponents/Textbox.css
+++ b/src/components/FormComponents/Textbox.css
@@ -1,25 +1,26 @@
 #text-container {
-    width:55%;
+    width: 55%;
     max-width: 100%;
     border-radius: 5px;
-    border:3px solid #d0d0d0;
-    margin:20px;
+    border: 3px solid #d0d0d0;
+    margin: 20px;
 }
 .text-input-item-container {
-    display:flex;
-    padding:20px;
+    display: flex;
+    padding: 20px;
     align-items: center;
 }
 
 .text-input-item-container label {
-    margin:20px;
+    margin: 20px;
     margin-left: 0;
 }
-.text-input-item-container input, .text-input-item-container textarea {
-    border: 2px solid black;
+.text-input-item-container input,
+.text-input-item-container textarea {
+    border: 2px solid rgb(211, 211, 211);
     border-radius: 4px;
     font-size: 1em;
-    padding:10px;
+    padding: 8px;
 }
 
 .text-input-item-container textarea {
