--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Display:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=DM+Serif+Display:ital@0;1&display=swap");
 
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
 
 body {
-  padding:0;
-  margin:0;
-  font-family: "DM Sans", Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: "DM Sans", Arial, Helvetica, sans-serif;
 }
 
-h1, h2, h3 {
-  font-family: "DM Serif Display";
+h1,
+h2,
+h3 {
+    font-family: "DM Serif Display";
 }
